UtahLiveDataTest/src/objects/AnnouncementServiceArea__c.object
<CustomObject>
    <description>[Business]  Service Area associated with an Annoucement</description>
    <fields>
        <fullName>Announcement__c</fullName>
        <label>Announcement</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipName>RelatedServiceAreas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Funding Opportunity Project Areas</relationshipLabel>
        <relationshipName>Funding_Opportunity_Project_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideRemoveServiceArea__c</fullName>
        <formula>NOT(AND(Announcement__r.ScheduleManager__c =  $User.Id, OR(text(Announcement__r.Status__c) = &apos;In Progress&apos; ,text(Announcement__r.Status__c) = &apos;Validated&apos;,text(Announcement__r.Status__c) = &apos;Disapproved&apos;) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideRemoveServiceArea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area (Obsolete)</label>
        <referenceTo>ProgramServiceArea__c</referenceTo>
        <relationshipLabel>Funding Opportunity Project Areas</relationshipLabel>
        <relationshipName>AnnouncementServiceArea</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceAreaName__c</fullName>
        <formula>ServiceArea__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipName>AnnouncementServiceAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>ServiceArea__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Funding Opportunity Project Area</label>
    <nameField>
        <displayFormat>ASA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Opportunity Project Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>